# file-scripts

./: .gitattributes  .gitignore  PKGBUILD  README  README.md  file-scripts.install  file-scripts.rb  file-scripts.spec  setup.py
bash/: fzf.sh  search.sh  version.sh
file_scripts/: editor.py  error.py  fzf.py  search.py
lib/: search.sh
misc/: fzf  fzf.sh  search  search.sh  version.sh
python/: pyproject.toml  setup.py
python/file_scripts/: fzf.py  search.py
tests/: test_editor.py  test_fzf.py  test_search.py
